--- a/kasa/src/components/Footer/style.css
+++ b/kasa/src/components/Footer/style.css
@@ -1,11 +1,3 @@
-body {
-  font-family: 'Montserrat', sans-serif;
-  max-width: 1240px;
-  display: flex;
-  align-items: center;
-  width: auto;
-}
-
 .footer {
   background-color: black;
   color: white;
