--- a/kasa/src/components/Header/style.css
+++ b/kasa/src/components/Header/style.css
@@ -1,3 +1,9 @@
+.header-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .header {
   display: flex;
   flex-direction: row;
