--- a/kasa/src/style/style.css
+++ b/kasa/src/style/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  /* the following code wreaks havoc!! */
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  height: 100vh;
 }
